# Rust-based-kernel-dev

./: .gitignore  Cargo.toml  build.rs  run.sh
.cargo/: config.toml
src/: batch.rs  lang_items.rs  lib.rs  link_app.S  main.rs
src/sbi/: console.rs  mod.rs  other.rs  syscall.rs
src/sync/: mod.rs  spin.rs  upcell.rs
src/syscall/: call.rs  info.rs  mod.rs
src/trap/: ctx.rs  mod.rs  trap.S
user/: Cargo.toml  build.sh
user/src/: console.rs  lang_items.rs  lib.rs  syscall.rs
